--- a/.htaccess
+++ b/.htaccess
@@ -1,16 +1,24 @@
 # The htaccess file of Hi-Buluo.
-# This is define the API, pages and extensions directories.
+# This is define the API, pages and <del>extensions</del> directories.
 
 # Index file of Hi-Buluo.
 DirectoryIndex index.php index.html index.htm
-#Custom error pages.
+# Define error pages.
 ErrorDocument 404 vendor/pages/error.php?err=404
 ErrorDocument 403 vendor/pages/error.php?err=403
 # Enable URL Rewrite.
 Options +FollowSymlinks
+# Disable to list all directories by accessing non-mian page folder.
+Options -Indexes
 RewriteEngine on
-RewriteRule ^api/([0-9A-Za-z\-]+)/(.*)$ api.php?function=$1&extends=$2
-RewriteRule ^user/(.*)$ index.php?page=user&user=$1
-RewriteRule ^post/([0-9]+)$ index.php?page=post&post=$1
-RewriteRule ^buluo/([0-9]*)$ index.php?page=buluo&buluo=$1
-RewriteRule ^admin/(.*)$ admin.php?page=$1
+RewriteBase /
+# API Pages, ignore LettEr'S bIg ANd sMAll
+RewriteRule ^api/([0-9A-Za-z\-]+)/(.*)$ api.php?function=$1&extends=$2 [NC,L,QSA]
+RewriteRule ^user/(.*)$ index.php?page=user&user=$1 [NC,L,QSA]
+RewriteRule ^post/([0-9]+)$ index.php?page=post&post=$1 [NC,L,QSA]
+RewriteRule ^buluo/([0-9]*)$ index.php?page=buluo&buluo=$1 [NC,L,QSA]
+RewriteRule ^admin/(.*)$ admin.php?page=$1 [NC,L,QSA]
+RewriteRule ^auth/$ index.php?page=auth [NC,L,QSA]
+# Deny user to access these pages.
+RewriteRule ^vendor/$ - [F,L]
+RewriteRule ^storage/$ - [F,L]
